@@ -1,0 +1,9 @@
+﻿namespace ValidationViaDependencyInjection.Models
+{
+    public sealed class Person
+    {
+        public int Age { get; set; }
+        public string FirstName { get; set; }
+        public string LastName { get; set; }
+    }
+}
