@@ -1,0 +1,8 @@
+﻿//namespace ValidationViaDependencyInjection.Validators
+//{
+//    public sealed class PersonContext
+//    {
+//        public int MinimumAge { get; set; }
+//        public bool LastNameIsOptional { get; set; }
+//    }
+//}
